V 2.0 - LogBack-Usage.md updated (WIP)